--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -29,7 +29,7 @@ select {
   box-sizing: border-box;
 }
 
-.container-contact > input[type="submit"] {
+.container-contact > button {
   width: 30%;
   background-color: #4caf50;
   color: white;
@@ -66,6 +66,13 @@ label {
   font-weight: 700;
 }
 
+.submited:disabled {
+  background: #e9e8e6;
+  color: black;
+  font-weight: 700;
+  cursor: no-drop;
+}
+
 @media screen and (max-width: 1800px) {
   .container-contact > input[type="text"],
   select {
@@ -73,7 +80,7 @@ label {
     width: 40%;
   }
 
-  .container-contact > input[type="submit"] {
+  .container-contact > button {
     width: 40%;
     padding: 10px 14px;
   }
@@ -105,7 +112,7 @@ label {
     width: 40%;
   }
 
-  .container-contact > input[type="submit"] {
+  .container-contact > button {
     width: 40%;
     padding: 6px 10px;
   }
@@ -136,7 +143,7 @@ label {
     width: 45%;
   }
 
-  .container-contact > input[type="submit"] {
+  .container-contact > button {
     width: 45%;
   }
   label {
@@ -176,7 +183,7 @@ label {
     width: 60%;
   }
 
-  .container-contact > input[type="submit"] {
+  .container-contact > button {
     width: 60%;
   }
   label {
