--- a/src/components/footer-page/Footer.css
+++ b/src/components/footer-page/Footer.css
@@ -93,6 +93,9 @@
     object-fit: contain;
     border-radius: 5px;
   }
+  .remove-format-footer {
+    font-size: 16px;
+  }
 }
 
 @media screen and (max-width: 1200px) {
