--- a/src/components/back-top-button/BackToTopButton.css
+++ b/src/components/back-top-button/BackToTopButton.css
@@ -5,6 +5,9 @@
   height: 50px;
   width: 50px;
   font-size: 50px;
+  text-align: center;
+  background-color: aqua;
+  border-radius: 30px;
 }
 
 @media screen and (max-width: 1500px) {
@@ -12,6 +15,7 @@
     height: 40px;
     width: 40px;
     font-size: 40px;
+    right: 8px;
   }
 }
 
@@ -46,6 +50,6 @@
     height: 25px;
     width: 25px;
     font-size: 25px;
-    right: 30px;
+    right: 3px;
   }
 }
