--- a/src/components/footer-page/Footer.css
+++ b/src/components/footer-page/Footer.css
@@ -37,6 +37,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .footer-second-column > p {
@@ -50,6 +51,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 
 .footer-last-column > p {
