--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -15,9 +15,12 @@ h2 {
   letter-spacing: 3px;
 }
 
-h3 {
+.remove-format-footer-home {
+  color: white;
   font-size: 50px;
   letter-spacing: 3px;
+  font-weight: 700;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 1400px) {
