--- a/src/pages/services-page/Services.css
+++ b/src/pages/services-page/Services.css
@@ -5,7 +5,7 @@
 .fourt-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 }
 
@@ -17,6 +17,7 @@
 .second2-fourtpage {
   display: flex;
   flex-direction: column;
+  padding-left: 80px;
 }
 
 h6 {
@@ -193,5 +194,8 @@ h6 {
     font-size: 30px;
     padding-bottom: 20px;
     padding-top: 70px;
+  }
+  .second2-fourtpage {
+    padding-left: 0px;
   }
 }
