--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -4,7 +4,7 @@
 
 .MuiBox-root > button {
   color: #f4b510;
-  font-size: 17px;
+  font-size: 16px;
 }
 
 .css-r8u8y9 {
@@ -27,6 +27,10 @@
 .isDisabled {
   color: currentColor;
   text-decoration: none;
+}
+
+.css-6jat1c {
+  padding: 0;
 }
 
 @media screen and (max-width: 1000px) {
