--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -58,12 +58,13 @@ h2 {
   h1 {
     font-size: 20px;
     text-align: center;
+    margin-top: 30px;
   }
   h2 {
     font-size: 40px;
     text-align: center;
   }
-  h3 {
+  .remove-format-footer-home {
     font-size: 30px;
     text-align: center;
   }
