--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -34,6 +34,9 @@
 }
 
 @media screen and (max-width: 1100px) {
+  .css-skxymm {
+    display: none !important;
+  }
   .css-1lfs2tq-MuiTypography-root {
     display: flex;
     justify-content: flex-start;
