--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -31,12 +31,10 @@
 
 .css-1t6c9ts > .css-6jat1c {
   padding: 0 !important;
+  margin: 0 !important;
 }
 
 @media screen and (max-width: 1100px) {
-  .css-skxymm {
-    display: none !important;
-  }
   .css-1lfs2tq-MuiTypography-root {
     display: flex;
     justify-content: flex-start;
