--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -35,6 +35,10 @@
 }
 
 @media screen and (max-width: 1100px) {
+  .css-1t6c9ts {
+    display: flex !important;
+  }
+
   .css-1lfs2tq-MuiTypography-root {
     display: flex;
     justify-content: flex-start;
