--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -36,7 +36,7 @@
 
 @media screen and (max-width: 1100px) {
   .css-1t6c9ts {
-    display: flex !important;
+    display: none !important;
   }
 
   .css-1lfs2tq-MuiTypography-root {
