--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -35,10 +35,6 @@
 }
 
 @media screen and (max-width: 1100px) {
-  .css-1t6c9ts {
-    display: none !important;
-  }
-
   .css-1lfs2tq-MuiTypography-root {
     display: flex;
     justify-content: flex-start;
@@ -51,6 +47,7 @@
     display: flex;
     justify-content: flex-start;
     margin-left: 5px;
+    font-size: 10px;
   }
 }
 
