nu mai instala prostii

--- a/src/pages/contact/contactpage.css
+++ b/src/pages/contact/contactpage.css
@@ -128,7 +128,7 @@ label {
     width: 30%;
   }
   .header-contact {
-    font-size: 30%;
+    font-size: 30px;
     margin: 50px 0 10px 0;
   }
   .contact-message {
