--- a/src/pages/not-found/NotFound.css
+++ b/src/pages/not-found/NotFound.css
@@ -52,6 +52,11 @@
     font-size: 22px;
     font-weight: 700;
   }
+  .error404pic {
+    width: 450px;
+    height: 450px;
+    object-fit: contain;
+  }
 }
 
 @media screen and (max-width: 900px) {
