am terminat cu slide show-ul

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -90,3 +90,19 @@ h2 {
     font-size: 30px;
   }
 }
+
+/*
+.element {
+  animation: myAnimation 5s linear infinite;
+}
+
+@keyframes myAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(100px);
+  }
+}
+
+*/
