am schimbat culoarea la slide buttons

--- a/src/pages/slide-protfolio/SlidePortfolio.css
+++ b/src/pages/slide-protfolio/SlidePortfolio.css
@@ -15,7 +15,7 @@
   margin: 0 -60px;
   background-color: Transparent;
   border: none;
-  color: #4caf50;
+  color: black;
   font-weight: 700;
   z-index: 1000;
   display: flex;
