--- a/src/pages/slide-protfolio/SlidePortfolio.css
+++ b/src/pages/slide-protfolio/SlidePortfolio.css
@@ -20,10 +20,9 @@
   z-index: 1000;
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 4px;
   cursor: pointer;
-  display: inline-block;
-  text-align: center !important;
 }
 
 .slide-flex {
