--- a/src/pages/slide-protfolio/SlidePortfolio.css
+++ b/src/pages/slide-protfolio/SlidePortfolio.css
@@ -13,11 +13,10 @@
   width: auto;
   display: flex;
   margin: 0 10px;
-  background-color: #3dd816 !important;
+  background-color: #3dd816;
   border: none;
   color: black;
   font-weight: 700;
-  z-index: 1000;
   display: flex;
   align-items: center;
   padding: 4px;
@@ -63,6 +62,7 @@
   .button-slide {
     font-size: 30px;
     margin: 10px;
+    padding-bottom: 5px;
   }
 }
 
