--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -22,6 +22,10 @@ h2 {
   text-decoration: none;
 }
 
+.animate__animated.animate__flash {
+  --animate-duration: 3s;
+}
+
 @media screen and (max-width: 1600px) {
   .profilepic {
     width: 400px;
