--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -34,7 +34,7 @@
   margin: 0 !important;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1100px) and (orientation: landscape) {
   .css-1lfs2tq-MuiTypography-root {
     display: flex;
     justify-content: flex-start;
@@ -51,7 +51,7 @@
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (orientation: landscape) {
   .css-1t6c9ts {
     display: flex;
     justify-content: space-evenly;
