--- a/src/pages/web-design/WebDesign.css
+++ b/src/pages/web-design/WebDesign.css
@@ -77,7 +77,7 @@ h5 {
   }
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1100px) and (orientation: landscape) {
   .secondpicture {
     width: 380px;
     height: 380px;
@@ -89,7 +89,7 @@ h5 {
   }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 900px) and (orientation: landscape) {
   .second-container {
     display: flex;
     flex-direction: column;
@@ -112,7 +112,7 @@ h5 {
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) and (orientation: landscape) {
   .secondpicture {
     width: 350px;
     height: 350px;
@@ -131,7 +131,7 @@ h5 {
   }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 450px) and (orientation: landscape) {
   .secondpicture {
     width: 300px;
     height: 300px;
