--- a/src/pages/contact/contactpage.css
+++ b/src/pages/contact/contactpage.css
@@ -53,13 +53,15 @@ select {
 
 .container-contact > button {
   width: 30%;
-  background-color: #4caf50;
+  background: transparent;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
-  border: none;
+  border: 1px solid white;
   border-radius: 4px;
   cursor: pointer;
+  font-weight: 700;
+  font-size: 16px;
 }
 
 .container-contact > input[type="submit"]:hover {
