am implementat o parte din animatie

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -21,7 +21,7 @@ h2 {
   font-weight: 700;
   text-decoration: none;
   background-color: transparent;
-  border: none;
+  border: 1px solid white;
   border-radius: 10px;
 }
 
