--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -23,6 +23,7 @@ h2 {
   background-color: transparent;
   border: 1px solid white;
   border-radius: 10px;
+  color: none;
 }
 
 @media screen and (max-width: 1600px) {
