modificari imagini, am introdus width si height

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -26,12 +26,21 @@ h2 {
   color: none;
 }
 
+.profilepic {
+  max-width: 650px;
+  max-height: 650px;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  border-radius: 5px;
+}
+
 @media screen and (max-width: 1600px) {
   .profilepic {
-    width: 400px;
-    height: 400px;
-    object-fit: contain;
+    max-width: 400px;
+    max-height: 400px;
   }
+
   h1 {
     font-size: 30px;
     letter-spacing: 3px;
@@ -55,9 +64,8 @@ h2 {
   }
 
   .profilepic {
-    width: 300px;
-    height: 300px;
-    object-fit: contain;
+    max-width: 300px;
+    max-height: 300px;
   }
   h1 {
     font-size: 20px;
@@ -85,9 +93,8 @@ h2 {
     align-items: center;
   }
   .profilepic {
-    width: 270px;
-    height: 270px;
-    object-fit: contain;
+    max-width: 270px;
+    max-height: 270px;
   }
   h2 {
     font-size: 30px;
