--- a/src/pages/slide-protfolio/SlidePortfolio.css
+++ b/src/pages/slide-protfolio/SlidePortfolio.css
@@ -33,6 +33,7 @@
 
 .slide-image {
   width: 680px;
+  height: auto;
   object-fit: contain;
   border-radius: 5px;
 }
@@ -59,7 +60,7 @@
 
 @media screen and (max-width: 2000px) {
   .slide-image {
-    width: 450px;
+    width: 500px;
   }
   .button-slide {
     font-size: 30px;
@@ -69,7 +70,7 @@
 
 @media screen and (max-width: 1500px) {
   .slide-image {
-    width: 390px;
+    width: 450px;
   }
   .header-slide {
     font-size: 50px;
