--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -34,6 +34,13 @@
   margin: 0 !important;
 }
 
+.h5 {
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: 1.6;
+  letter-spacing: 0.0075em;
+}
+
 @media screen and (max-width: 1100px) and (orientation: landscape) {
   .css-1lfs2tq-MuiTypography-root {
     display: flex;
