--- a/src/pages/web-design/WebDesign.css
+++ b/src/pages/web-design/WebDesign.css
@@ -13,7 +13,7 @@
   font-weight: 700;
 }
 
-h5 {
+.h5 {
   text-align: center;
   font-size: 60px;
   letter-spacing: 3px;
@@ -42,7 +42,7 @@ h5 {
     max-width: 520px;
     max-height: 520px;
   }
-  h5 {
+  .h5 {
     font-size: 50px;
     letter-spacing: 3px;
   }
@@ -53,7 +53,7 @@ h5 {
     max-width: 480px;
     max-height: 480px;
   }
-  h5 {
+  .h5 {
     font-size: 40px;
     letter-spacing: 3px;
   }
@@ -64,7 +64,7 @@ h5 {
     max-width: 450px;
     max-height: 450px;
   }
-  h5 {
+  .h5 {
     font-size: 30px;
     letter-spacing: 3px;
   }
@@ -79,7 +79,7 @@ h5 {
     max-width: 380px;
     height: 380px;
   }
-  h5 {
+  .h5 {
     font-size: 25px;
     letter-spacing: 3px;
   }
@@ -97,7 +97,7 @@ h5 {
     max-width: 300px;
     max-height: 300px;
   }
-  h5 {
+  .h5 {
     margin-bottom: 20px;
     font-size: 20px;
   }
@@ -112,7 +112,7 @@ h5 {
     max-width: 350px;
     max-height: 350px;
   }
-  h5 {
+  .h5 {
     font-size: 15px;
     letter-spacing: 3px;
     margin: 40px 4px 20px 4px;
@@ -134,7 +134,7 @@ h5 {
     font-size: 40px;
     padding-top: 70px;
   }
-  h5 {
+  .h5 {
     font-size: 16px;
     letter-spacing: 3px;
     margin-bottom: 20px 0;
