--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -3,18 +3,18 @@
 }
 
 .MuiBox-root > button {
-  color: #f4b510;
+  color: rgb(255, 255, 255);
   font-size: 16px;
 }
 
 .css-r8u8y9 {
-  color: #f4b510;
+  color: rgba(255, 255, 255);
   background-color: rgb(12, 11, 11);
   font-size: 10px;
 }
 
 .css-1oy63y8 {
-  color: #f4b510;
+  color: rgba(255, 255, 255);
 }
 
 .css-1k0jequ {
