--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  height: 100vh;
 }
 
 h1 {
@@ -58,6 +59,7 @@ h2 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 110vh;
   }
 
   .profilepic {
@@ -84,7 +86,6 @@ h2 {
 
 @media screen and (max-width: 500px) {
   .container {
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
