modificari logo + footer

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -18,9 +18,18 @@
   flex-direction: row;
 }
 
-.first-column-list a {
+.nav-link {
   text-decoration: none;
   margin-right: 10px;
+  color: rgba(255, 255, 255);
+  font-size: 16px;
+  font-weight: 700;
+  margin: 16px 7px 15px 0;
+  transition: all 0.4s;
+}
+
+.nav-link:hover {
+  color: rgba(0, 183, 255);
 }
 
 p {
@@ -37,10 +46,10 @@ p {
 }
 
 .logo {
-  max-width: 300px;
+  max-width: 100px;
   max-height: auto;
   object-fit: contain;
-  margin-top: 10px;
+  margin-top: 20px;
   margin-bottom: 5px;
 }
 
@@ -133,6 +142,9 @@ p {
   p {
     font-size: 14px;
   }
+  .nav-link {
+    font-size: 14px;
+  }
 
   .all-rights {
     font-size: 14px;
@@ -184,6 +196,9 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  .nav-link {
+    margin: 5px 0;
   }
 
   .footer p {
