--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -29,6 +29,11 @@
   text-decoration: none;
 }
 
+.isDisabled:hover {
+  color: rgb(255, 251, 0);
+  transition: all 0.4s;
+}
+
 .css-1t6c9ts > .css-6jat1c {
   padding: 0 !important;
   margin: 0 !important;
